PTI-81: Update list page. Add page size control. Add page count display. (#67)
* PTI-81: Update list page. Add page size control. Add page count display.

* [PTI-81]: Update search params to take an array of datasets, cleanup.
